# outil-valo

./: .env.example  .gitignore  CLAUDE.md  PROJECT_V1.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
docs/: api.md  data-model.md  excel-export.md  index.md  method.md  providers.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts
frontend/src/components/: ui.tsx
frontend/src/pages/: Dashboard.tsx  PanelPage.tsx  RunResult.tsx  TargetNew.tsx  TransactionsPage.tsx
migrations/: 001_init.sql  002_recadrage_decouverte.sql  003_discovery_cache.sql  004_growth_adjustment.sql  005_run_growth_breakdown.sql  006_tiers_flags.sql
scripts/: sync_db.py  test_p1.py  test_p2.py
src/valo/: config.py  dependencies.py  logging.py  main.py  models.py  schemas.py
src/valo/method/: anchor.py  excel_export.py  service.py  valuation.py
src/valo/prompts/: discovery.py
src/valo/providers/: base.py  mock_llm.py  openai_provider.py  yahoo_provider.py
src/valo/routers/: comps.py  runs.py  targets.py  transactions.py
src/valo/storage/: base.py  repositories.py  sqlite_store.py
tests/: test_p1_storage.py  test_p2_method.py  test_p3_api.py  test_p3a_api.py  test_p3a_discovery.py  test_p3b_openai.py  test_valuation.py
