[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008 : Depends() en argument par défaut = idiome FastAPI, pas un bug.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[project]
name = "outil-valo-comparables"
version = "0.1.0"
requires-python = ">=3.12"
